<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeaponFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/wSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by" />

        <Spinner
            android:id="@+id/wSortOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/wFilterBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter" />

        <Spinner
            android:id="@+id/wFilterOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/wheadgear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/headgear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wclothing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weaponList" />

    <Button
        android:id="@+id/wclothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/clothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wshoes"
        app:layout_constraintStart_toEndOf="@+id/wheadgear"
        app:layout_constraintTop_toBottomOf="@+id/weaponList" />

    <Button
        android:id="@+id/wshoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="8dp"
        android:text="@string/shoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wclothing"
        app:layout_constraintTop_toBottomOf="@+id/weaponList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weaponList"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:itemCount="4" />

</androidx.constraintlayout.widget.ConstraintLayout>